--- a/package.json
+++ b/package.json
@@ -52,8 +52,8 @@
   "scripts": {
     "build": "npx babel src --out-dir dist --copy-files --source-maps",
     "upload": "npm run build && npm login && cd dist && npm publish --access public",
-    "upload:beta": "npm run build && npm login && npm publish --access public --tag beta",
-    "upload:alpha": "npm run build && npm login && npm publish --access public --tag alpha",
+    "upload:beta": "npm run build && npm login && cd dist && npm publish --access public --tag beta",
+    "upload:alpha": "npm run build && npm login && cd dist && npm publish --access public --tag alpha",
     "eslint:analyze": "eslint --ext .js,.jsx src/",
     "eslint:fix": "eslint --fix --ext .js,.jsx src/",
     "test": "test --watchAll=false --verbose",
